--- a/index.html
+++ b/index.html
@@ -5,9 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Maja Piszczek | Front-end developer</title>
   </head>
   <body>
-    <h1>hi</h1>
+    <section class="main">
+      <div class="intro">
+        <h3>Hi! I'm</h3>
+        <h1>maja piszczek.</h1>
+        <h2>Junior front-end developer,</h2>
+        <h4>based in Gdańsk, Poland.</h4>
+      </div>
+      <div>
+        <img src="/images/img.jpeg" alt="Maja Piszczek" />
+      </div>
+    </section>
   </body>
 </html>
