added the structure of about section

--- a/index.html
+++ b/index.html
@@ -26,5 +26,21 @@
         <img src="/images/img.jpeg" alt="Maja Piszczek" />
       </div>
     </section>
+    <section class="about-page">
+      <div>
+        <img src="/images/img.jpeg" alt="Maja Piszczek" />
+      </div>
+      <div class="about">
+        <h2>about</h2>
+        <p>
+          I’m a girl who is excited to learn new things. Recently felt for web
+          development and coding in general. Made hobby out of it and wondering
+          if I could make a job out of it as well! Besides that, all I do is
+          cuddle with my dog or sometimes I do pole dance a little.
+        </p>
+        <h5>Tools and technologies I’m currently using:</h5>
+        <h6>Want to see my resume?</h6>
+      </div>
+    </section>
   </body>
 </html>
