updated about section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <title>Maja Piszczek | Front-end developer</title>
   </head>
   <body>
-    <section class="main">
+    <section class="main pink">
       <div class="intro">
         <h3>Hi! I'm</h3>
         <h1>maja piszczek.</h1>
@@ -26,21 +26,69 @@
         <img src="/images/img.jpeg" alt="Maja Piszczek" />
       </div>
     </section>
-    <section class="about-page">
+    <section class="about-page light">
       <div>
         <img src="/images/img.jpeg" alt="Maja Piszczek" />
       </div>
       <div class="about">
-        <h2>about</h2>
-        <p>
-          I’m a girl who is excited to learn new things. Recently felt for web
-          development and coding in general. Made hobby out of it and wondering
-          if I could make a job out of it as well! Besides that, all I do is
-          cuddle with my dog or sometimes I do pole dance a little.
-        </p>
+        <div class="about-paragraph">
+          <h2>about</h2>
+          <p>
+            I’m a girl who is excited to learn new things. Recently felt for web
+            development and coding in general. Made hobby out of it and
+            wondering if I could make a job out of it as well! Besides that, all
+            I do is cuddle with my dog or sometimes I do pole dance a little.
+          </p>
+        </div>
         <h5>Tools and technologies I’m currently using:</h5>
-        <h6>Want to see my resume?</h6>
+        <ul>
+          <li>
+            <img src="/images/html-logo.png" alt="HTML" />
+          </li>
+          <li>
+            <img src="/images/css-logo.png" alt="CSS" />
+          </li>
+          <li>
+            <img src="/images/javascript-logo.png" alt="JavaScript" />
+          </li>
+          <li>
+            <img src="/images/react-logo.png" alt="React.js" />
+          </li>
+          <li>
+            <img src="/images/bootstrap-logo.png" alt="Bootstrap" />
+          </li>
+          <li>
+            <img src="/images/vscode-logo.png" alt="VSCode" />
+          </li>
+          <li>
+            <img src="/images/git-logo.png" alt="Git" />
+          </li>
+          <li>
+            <img src="/images/npm-logo.png" alt="NPM" />
+          </li>
+        </ul>
+
+        <h6>
+          <a
+            href="https://www.canva.com/design/DAFb_NlHPl0/8oRAVGHlt4EKlBoCQd6AUA/view?utm_content=DAFb_NlHPl0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
+            target="_blank"
+            >Check out my resume!</a
+          >
+        </h6>
       </div>
     </section>
+    <section class="projects pink">
+      <h2>projects</h2>
+      <div class="projects">
+        <div>
+          <h3>dictionary</h3>
+          <p>
+            Dictionary coded with React.js on SheCodes workshop. You can search
+            for any english word you want!
+          </p>
+        </div>
+      </div>
+    </section>
+    <section class="contact light"></section>
   </body>
 </html>
