made it seo-friendly

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Hi! I am a Junior Front-end Developer. Check out my work and contact me!"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/style.css" />
@@ -92,6 +96,7 @@
           <a
             href="https://www.canva.com/design/DAFb_NlHPl0/8oRAVGHlt4EKlBoCQd6AUA/view?utm_content=DAFb_NlHPl0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
             target="_blank"
+            title="resume"
             >Check out my resume!</a
           >
         </h6>
@@ -102,7 +107,10 @@
       <div class="projects">
         <div>
           <h3>
-            <a href="https://storied-mermaid-1da81c.netlify.app" target="_blank"
+            <a
+              href="https://storied-mermaid-1da81c.netlify.app"
+              target="_blank"
+              title="dictionary project"
               >dictionary</a
             >
           </h3>
@@ -113,7 +121,10 @@
         </div>
         <div>
           <h3>
-            <a href="https://glowing-kashata-610a5c.netlify.app" target="_blank"
+            <a
+              href="https://glowing-kashata-610a5c.netlify.app"
+              target="_blank"
+              title="weather app"
               >weather app</a
             >
           </h3>
@@ -127,6 +138,7 @@
             <a
               href="https://statuesque-pothos-3c76ea.netlify.app"
               target="_blank"
+              title="drum kit"
               >drum kit</a
             >
           </h3>
@@ -139,7 +151,10 @@
       <div class="github">
         <i class="fa-brands fa-github"></i>
         <span
-          ><a href="https://github.com/majapiszczek" target="_blank"
+          ><a
+            href="https://github.com/majapiszczek"
+            target="_blank"
+            title="Github Maja Piszczek"
             >My code is open-sourced on GitHub!</a
           ></span
         >
@@ -154,14 +169,20 @@
         <ul>
           <li>
             <i class="fa-solid fa-envelope"></i>
-            <a href="mailto:piszczekmaja33@gamil.com"
+            <a
+              href="mailto:piszczekmaja33@gamil.com"
+              title="email Maja Piszczek"
               >piszczekmaja33@gmail.com</a
             >
           </li>
 
           <li>
             <i class="fa-brands fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/majapiszczek/" target="_blank">
+            <a
+              href="https://www.linkedin.com/in/majapiszczek/"
+              target="_blank"
+              title="linkedin Maja Piszczek"
+            >
               majapiszczek</a
             >
           </li>
