--- a/index.html
+++ b/index.html
@@ -47,24 +47,25 @@
         <h4>based in Gdańsk, Poland.</h4>
       </div>
       <div>
-        <img src="/images/img.jpeg" alt="Maja Piszczek" />
+        <img src="/images/img.jpeg" alt="Maja Piszczek" class="main-img" />
       </div>
     </section>
     <section class="about-page light" id="about">
       <div>
-        <img src="/images/img-2.jpeg" alt="Maja Piszczek" />
+        <img src="/images/img2.JPG" alt="Maja Piszczek" class="about-img" />
       </div>
       <div class="about">
         <div class="about-paragraph">
-          <h2>about</h2>
+          <h2>about me</h2>
           <p>
-            I’m a girl who is excited to learn new things. Recently felt for web
-            development and coding in general. Made hobby out of it and
-            wondering if I could make a job out of it as well! Besides that, all
-            I do is cuddle with my dog or sometimes I do pole dance a little.
+            Hi! I'm a girl who is excited to learn new things. Recently felt for
+            web development and coding in general. Now it's one of my main
+            hobbies next to pole dancing and cuddling my dog. Currently still
+            growing as a front-end developer but not affraid to go for it. I'm
+            ready to gain more experience and become a queen of coding.
           </p>
         </div>
-        <h5>Tools and technologies I’m currently using:</h5>
+        <h5>Tools and technologies I'm currently using:</h5>
         <ul>
           <li>
             <img src="/images/html-logo.png" alt="HTML" />
@@ -93,10 +94,7 @@
         </ul>
 
         <h6>
-          <a
-            href="https://www.canva.com/design/DAFb_NlHPl0/8oRAVGHlt4EKlBoCQd6AUA/view?utm_content=DAFb_NlHPl0&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton"
-            target="_blank"
-            title="resume"
+          <a href="resume.pdf" target="_blank" title="resume"
             >Check out my resume!</a
           >
         </h6>
@@ -108,43 +106,62 @@
         <div>
           <h3>
             <a
-              href="https://storied-mermaid-1da81c.netlify.app"
+              href="https://beoplayheadphones.netlify.app/#"
               target="_blank"
-              title="dictionary project"
-              >dictionary</a
+              title="headphones shocase"
+              >headphones showcase</a
             >
           </h3>
           <p>
-            Dictionary coded with React.js on SheCodes workshop. You can search
-            for any english word you want!
+            Take a look at this offer. Headphones showcase for the online store.
+            <br />
+            Made with HTML, CSS, Vanilla JavaScript.
           </p>
         </div>
         <div>
           <h3>
             <a
-              href="https://glowing-kashata-610a5c.netlify.app"
+              href="https://checkouttheweather.netlify.app"
               target="_blank"
               title="weather app"
               >weather app</a
             >
           </h3>
           <p>
-            Weather App coded with React.js on SheCodes workshop. Check the
-            weather for the next five days, anywhere you would like.
+            Check out the weather in your city.
+            <br />
+            Made with React.js, CSS, API.
           </p>
         </div>
         <div>
           <h3>
             <a
-              href="https://statuesque-pothos-3c76ea.netlify.app"
+              href="https://construction-co-page.netlify.app"
               target="_blank"
-              title="drum kit"
-              >drum kit</a
+              title="landing page"
+              >landing page</a
             >
           </h3>
           <p>
-            Drum Kit coded with vanilla JavaScript on challenge by Wes Bos. Play
-            drum now.. On your keyboard!
+            See everything about Construction Co.. Landing page for a company.
+            <br />
+            Made with HTML, CSS, Bootstrap.
+          </p>
+        </div>
+        <div>
+          <h3>
+            <a
+              href="https://friendsquizgame.netlify.app"
+              target="_blank"
+              title="quiz game"
+              >quiz game</a
+            >
+          </h3>
+          <p>
+            Let's see if you know everything about Friends TV Show. A quiz game
+            for the fans.
+            <br />
+            Made with React.js, CSS.
           </p>
         </div>
       </div>
