--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             Hi! I'm a girl who is excited to learn new things. Recently felt for
             web development and coding in general. Now it's one of my main
             hobbies next to pole dancing and cuddling my dog. Currently still
-            growing as a front-end developer but not affraid to go for it. I'm
+            growing as a front-end developer but not afraid to go for it. I'm
             ready to gain more experience and become a queen of coding.
           </p>
         </div>
