linked to resume

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </ul>
 
         <h6>
-          <a href="resume.pdf" target="_blank" title="resume"
+          <a href="front-end-resume.pdf" target="_blank" title="resume"
             >Check out my resume!</a
           >
         </h6>
