--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <p>
             Take a look at this offer. Headphones showcase for the online store.
             <br />
-            Made with HTML, CSS, Vanilla JavaScript.
+            Coded with HTML, CSS, Vanilla JavaScript.
           </p>
         </div>
         <div>
@@ -130,7 +130,7 @@
           <p>
             Check out the weather in your city.
             <br />
-            Made with React.js, CSS, API.
+            Coded with React.js, CSS, API.
           </p>
         </div>
         <div>
@@ -145,7 +145,7 @@
           <p>
             See everything about Construction Co.. Landing page for a company.
             <br />
-            Made with HTML, CSS, Bootstrap.
+            Coded with HTML, CSS, Bootstrap.
           </p>
         </div>
         <div>
@@ -161,7 +161,7 @@
             Let's see if you know everything about Friends TV Show. A quiz game
             for the fans.
             <br />
-            Made with React.js, CSS.
+            Coded with React.js, CSS.
           </p>
         </div>
       </div>
